--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
 target/
 .idea
-.DS_Store
-*.iml
-.project
-.settings
-.classpath
-.recommenders
-.mvn/wrapper/maven-wrapper.jar
+/src/main/resources
 pom.xml
